IMPALA-5186: Handle failed CreateAndOpenScanner() in MT scan.

The bug was that a failed CreateAndOpenScanner() could cause
a scanner to be closed twice leading to freed memory being
accessed. The fix is straightforward.

Testing:
- I cleaned up test_failpoints.py and added an MT_DOP test
  dimension to cover this bug.
- Core tests passed.

Change-Id: I777c9b8ef2eb5b556c9b145d231c543b3b8ae270
Reviewed-on: http://gerrit.cloudera.org:8080/6618
Reviewed-by: Alex Behm <alex.behm@cloudera.com>
Tested-by: Impala Public Jenkins